# APEX-Life-OS

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  KNOWLEDGE_BASE.md  MEMORY.md  README.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apex/: __init__.py  __main__.py  cli.py  system.py
apex/agent/: __init__.py  config.py  dashboard.py  gateway.py  llm.py  loop.py  neural.py  scheduler.py  sessions.py  skills.py  tools.py  tui.py
apex/alerts/: __init__.py  channels.py  system.py
apex/core/: __init__.py  causal.py  knowledge_base.py  types.py
apex/governance/: __init__.py  audit.py  constraints.py
apex/knowledge/: __init__.py  bridge.py  vault.py
apex/mape/: __init__.py  analyzer.py  executor.py  loop.py  monitor.py  planner.py
apex/memory/: __init__.py  builtin.py  provider.py  registry.py  vaults.py
apex/neuro_symbolic/: __init__.py  neural.py  symbolic.py  verifier.py
apex/orchestration/: __init__.py  orchestrator.py  selector.py
apex/thresholds/: __init__.py  calibration.py  engine.py  risk_scorer.py
apex/voice/: __init__.py  stt.py  tts.py
apex_life_os.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
deploy/: apex-gateway.service  apex.service  gateway.env.example
outputs/: README.md
raw/: README.md
tests/: test_agent.py  test_agent_interfaces.py  test_alerts.py  test_cli.py  test_governance.py  test_knowledge_base.py  test_knowledge_bridge.py  test_knowledge_vault.py  test_mape.py  test_memory.py  test_memory_vaults.py  test_neuro_symbolic.py  test_orchestration.py  test_system.py  test_thresholds.py
wiki/: index.md
