[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-life-os"
version = "0.1.0"
description = "APEX Self-Evolving AI System — a MAPE-K-based autonomic platform with neuro-symbolic reasoning, decision orchestration, and human oversight."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "bboyallu" }]
dependencies = [
    "pydantic>=2.7",
]

[project.scripts]
apex = "apex.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
]
# Voice interaction is API-based (Whisper/TTS over HTTP) and needs no extra
# packages today; this extra is reserved for future local STT/TTS backends.
voice = []

[tool.setuptools.packages.find]
where = ["."]
include = ["apex*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
